fixed the text overflow and centered the header&body

--- a/html&css/style.css
+++ b/html&css/style.css
@@ -1,6 +1,8 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Scheherazade New', serif;
+    overflow-x: hidden;
 }
 
 .header{
@@ -8,6 +10,7 @@
     /* vh: 	Relative to 1% of the height of the viewport.
     viewpoint = the browser window size. If the viewport is 50cm wide, 1vw = 0.5cm. */
     width: 100%;
+    height: 100%;
     background-image: url(images/background2.jpg);
     background-position: center;
     background-size: cover;
@@ -27,13 +30,49 @@
 .nav-link ul li{
     list-style: none; /*No bullets*/
     display: inline-block; /*Horizontal*/
-    padding: 12px 12px;
+    padding: 1% 2%;
     position: relative;
-    background-color: #556B2F;
 }
 .nav-link ul li a{
-    color: white;
+    color: #800000;
     text-decoration: none;
     font-size: 14px;
     font-weight: bold;
+}
+.nav-link ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background-color: bisque;
+    display: block;
+    margin: auto;
+    transition: 0.2s;
+}
+/*::after creates a pseudo-element that is the last child of the selected element.
+It is often used to add cosmetic content to an element with the content property.
+It is inline by default.*/
+
+.nav-link ul li:hover::after{
+    width: 100%;
+}
+
+.text-box{
+    width: 100%;
+    color: white;
+    background-color: rgba(102, 0, 0, 0.7);
+    text-align: center;
+    position: absolute; /*positioned relative to the nearest positioned ancestor.
+    Moves along with page scrolling if no ancestor available.
+    “don’t let this element sit in its normal position, ignore the order the HTML is written in and put
+    it exactly where I say it should be in the window”*/
+    top: 50%;
+    transform: translate(-50, -50);
+}
+.text-box h1{
+    font-size: 66px;
+}
+.text-box p{
+    margin: 1px 0 5px; /*top, left/right bottom*/
+    font-size: 16px;
+    color: white;
 }
